# xyz-qgis-plugin

./: .gitignore  .gitlab-ci.yml  .ort.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASENOTE.md  makeBuild.sh  requirements.txt  requirements_dev.txt  runTest.sh  setup.cfg  setup.py  zip_dir.py
.github/workflows/: main.yml
XYZHubConnector/: .pylintrc  LICENSE  __init__.py  config.py  metadata.txt  plugin.py  token.ini  utils.py
XYZHubConnector/controllers/: __init__.py
XYZHubConnector/gui/: __init__.py  base_token_dialog.py  basemap_dialog.py  filter_dialog.py  filter_info_dialog.py  server_dialog.py  space_dialog.py  space_info_dialog.py  token_dialog.py  token_info_dialog.py  token_ux.py  util_dialog.py
XYZHubConnector/gui/iml/: iml_space_info_dialog.py  iml_token_dialog.py  iml_token_info_dialog.py
XYZHubConnector/gui/ui/: basemap_dialog.ui  edit_filter_dialog.ui  edit_iml_space_dialog.ui  edit_iml_token_dialog.ui  edit_space_dialog.ui  edit_token_dialog.ui  tab_dialog.ui  (+2 more)
XYZHubConnector/models/: __init__.py  connection.py  loading_mode.py  space_model.py  token_model.py
XYZHubConnector/modules/: __init__.py  loader.py  loop_loader.py  refactor_loader.py  secret.py  space_loader.py
XYZHubConnector/xyz_qgis/: __init__.py
repo/: plugins.xml
test/: __init__.py  load_point_layer.py  make_point_layer.py  mock_iface.py  test_basemap.py  test_crypter.py  test_fields_similarity.py  test_layer_loader.py  test_parser.py  test_render_layer.py  test_tile_loader.py  test_tile_utils.py  test_token_model.py  utils.py
(+129 files in other folders)
