[bdist_wheel]
universal=1

[metadata]
name = xyz_qgis_plugin
version = attr: XYZHubConnector.__version__
author = HERE Global B.V. and its affiliate(s)
author_email = huyminh.nguyen@here.com
home_page = https://github.com/heremaps/xyz-qgis-plugin
description = QGIS Plugin that enable visualization and map editing via the HERE Data Hub API and HERE Platform IML API
long_description = file: README.md
long_description_content_type = text/markdown
license = The MIT License
license_files =
    LICENSE
platform = any
keywords = HERE, Data Hub, API, Platform, XYZ, QGIS, Map, Vector, Tile, GeoJSON
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: End Users/Desktop
    Environment :: X11 Applications :: Qt
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/heremaps/xyz-qgis-plugin/issues
    Source = https://github.com/heremaps/xyz-qgis-plugin

[flake8]
max-line-length = 99
ignore = E203,W503,E722,E731,F841,F401,E402,F403,F811